--- a/style.css
+++ b/style.css
@@ -1,30 +1,70 @@
 body{
     display: flex;
     flex-direction: column;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
     margin: 0;
     
 }
 .header{
     display: flex;
     justify-content: space-between;
-    padding-left: 100px;
-    padding-right: 100px;
-    margin: 0;
+    align-items: center;
+    padding-left: 350px;
+    padding-right: 450px;
+    padding-bottom: 70px;
     background-color: #1F2937;
+    color: #F9FAF8;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+.title{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex-basis: 500px;
+    
+    font-size: 18px;
     color: #F9FAF8;
     
 }
+.awesome{
+    color: #F9FAF8;
+    font-weight: 900;
+    font-size: 43px;
+    margin-bottom: -20px;
+}
+.placeholder{
+    background-color: wheat;
+}
+.image{
+    height: 300px;
+    width: 600px;
+
+}
 .footer{
     background-color: #1F2937;
-    color: #F9FAF8;
+    color: #E5E7EB;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px;
+}
+.dugme1{
+    background-color: #3882F6;
+    border-radius: 10px;
+    width: 150px;
+    height: 40px;
+    border: none;
+    color:  #E5E7EB;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 ul{
     display: flex;
-    gap: 8px;
+    gap: 20px;
     list-style: none;
     
 }
@@ -35,42 +75,96 @@ a{
 }
 .imageContanier{
     display: flex;
-    justify-content: space-between;
-    padding-left: 100px;
+    justify-content: center;
     padding-right: 100px;
     background-color: #1F2937;
     margin: 0;
+    gap: 50px;
+    padding-bottom: 100px;
+
 }
 .white{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 50px;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 20px;
+    margin-bottom: 100px;
 }
 .blocks{
     display: flex;
-    gap: 10px;
+    margin-left: 250px;
+    margin-right: 250px;
+
 }
 .block{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    font-size: 18px;
 }
 .uredi{
     height: 50px;
     width: 50px;
-    border-radius: 25%;
-    border-color: blue;
-    border: 5px;
-    background-color: rgb(107, 54, 54);
+    border-radius: 10px;
+    border-color: #3882F6;
+    border-style: solid;
+    padding:70px;
+    
 }
 .quote{
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
-    padding: 100px 300px;
+    padding:100px 500px;
+    font-size: 36px;
+    font-weight: 100;
+    font-style: italic;
+}
+.thor{
+    align-self: flex-end;
+    font-style: normal;
+    font-weight: bold;
+    margin-top: -50px;
+    padding-right: 40px;
+    font-size: 24px;
 }
 .blue{
     align-self: center;
     background-color: #3882F6;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 10px;
+    margin-top: 50px;
+    margin-bottom:50px;
+    padding-left: 30px;
+    padding-left: 30px;
+}
+.action{
+    color: #F9FAF8;
+    margin-left: 30px;
+    margin-right: 80px;
+    font-size: 12px;
+    
+    
+}
+
+.dugme2{
+    border-style: solid;
+    background-color: #3882F6;
+    border-color: #F9FAF8;
+    border-radius: 10px;
+    border-width: 2px;
+    color: #F9FAF8;
+    height: 40px;
+    width: 120px;
+    font-weight: bold;
+    align-self: center;
 }
